# Data-analysis-platform

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  data_prd_addendum.md  instruction.md  to_do_list.md
backend/: README.md  pyproject.toml  requirements-py310-win.in
backend/app/: __init__.py  main.py
backend/app/analyses/: __init__.py  registry.py
backend/app/api/: root.py
backend/app/core/: config.py  errors.py  runtime_contract.py
backend/app/services/: analysis_method_handlers.py  analysis_run_comparisons.py  analysis_run_execution.py  analysis_run_exports.py  analysis_run_history.py  analysis_run_results.py  analysis_run_retention.py  analysis_runner_attribute_control_chart.py  analysis_runners_categorical.py  analysis_runners_eda.py  analysis_runners_hypothesis.py  analysis_runners_quality.py  analysis_runners_regression.py  analysis_runs.py  attribute_control_limit_sets.py  attribute_control_phase_2.py  bayesian_recommendation_consistency.py  bayesian_recommendations.py  bayesian_studies.py  canonical_artifacts.py  dataset_profiles.py  dataset_rows.py  dataset_upload.py  dataset_version_retention.py  dataset_versions.py  doe_designs.py  doe_factorial_analysis.py  doe_response_revisions.py  doe_response_surface_analysis.py  gage_rr.py  jobs.py  parsing_options.py  regression_models.py  response_optimizer.py  response_surface_designs.py  row_readers.py  workspace_asset_retention.py  xlsx_reader.py
backend/app/statistics/: __init__.py  attribute_control_chart.py  bayesian_optimization.py  capability.py  chi_square_association.py  (+27 more)
(+424 files in other folders)
