[build-system]
requires = ["hatchling==1.26.3"]
build-backend = "hatchling.build"

[project]
name = "datalab-studio-backend"
version = "0.1.0"
description = "Local-first statistical analysis backend for DataLab Studio."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi==0.115.6",
    "pydantic-settings==2.7.0",
    "python-multipart==0.0.32",
    "uvicorn[standard]==0.32.1",
]

[project.optional-dependencies]
dev = [
    "httpx==0.28.1",
    "mypy==1.13.0",
    "pytest==8.3.4",
    "ruff==0.8.4",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
packages = ["app"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
